--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -150,7 +150,7 @@
                   <div class="category-desc">
                       <div class="category-icon"><i class="fa fa-comments-o" aria-hidden="true"></i><i class="fa fa-comments-o abs-icon" aria-hidden="true"></i></div>
                       <div class="category-detail category-desc-text">
-                          <p>Post, Comment and get informed about your interested body.</p>
+                          <p>Post, Comment and get informed around your Connections.</p>
                       </div>
                   </div>
               </div>
