--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,5 +1,5 @@
 
-<!-- <div class="container">
+<div class="container">
 <div class="row legisBoundary">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     Find Representatives:
@@ -47,13 +47,13 @@
         <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let legislator of legislators">
           <app-legislator [legislator]=legislator></app-legislator>
         </div>
-      </div> -->
+      </div>
 
 
      
 
 
-        
+        <!--
         <div class="row">
         
           <div class="col-md-8 small-padd b-r">
@@ -65,7 +65,7 @@
             </div>
           </div>
           
-          <!-- <div class="col-md-4 small-padd b-r">
+           <div class="col-md-4 small-padd b-r">
             <div class="form-group">
               <div class="input-with-icon">
                 <input type="text" class="form-control" placeholder="Apt">
@@ -81,7 +81,7 @@
                 <i class="ti-envelope"></i>
               </div>
             </div>
-          </div> -->
+          </div> 
           
           <div class="col-md-4 small-padd search-btn-div">
             <div class="form-group">
@@ -92,6 +92,6 @@
           </div>
           
         </div>
-        
+        -->
 
 
