--- a/src/styles.css
+++ b/src/styles.css
@@ -10240,7 +10240,7 @@ input{
     text-align: center;
 }
 .banner{
-    background-image: url(assets/images/network2.jpg);
+    background-image: url(assets/images/network5.png);
     height: 600px;
 }
 
