--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -153,6 +153,7 @@
   </div>
 </nav>
 <!-- <body> -->
+<div class="routlet">  
 <div class="container-fluid">
   <!-- <div class="ng-autocomplete common-search" *ngIf="isMobile">
       <ng-autocomplete
@@ -251,6 +252,7 @@
       <!-- </div> -->
       <!-- /.col-lg-3 -->
   </div>
+</div>
 </div>
 <!-- /.container -->
 <!-- The Modal -->
