--- a/src/app/components/security/register/register.component.html
+++ b/src/app/components/security/register/register.component.html
@@ -13,11 +13,11 @@
                         <div class="form-row">
                             <div class="col form-group">
                                 <label>First name </label>
-                                <input type="text" class="form-control" placeholder="First name" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
+                                <input type="text" class="form-control" placeholder="First name" formControlName="first_name" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
                             </div> 
                             <div class="col form-group">
                                 <label>Last name</label>
-                                <input type="text" class="form-control" placeholder="Last name" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/>
+                                <input type="text" class="form-control" placeholder="Last name" formControlName="last_name" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }"/>
                             </div> 
                         </div> -->
                         <div class="form-row">
