--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-<div class="row legisBoundary">
+<div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     Find Representatives:
   </div>
