search legislators css changes

--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -1,20 +1,53 @@
-
 <div class="container">
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    Find Representatives:
+  <div class="row legisBoundary" style="margin-top: 20px;">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      Find Representatives:
+    </div>
+
+    <div class="address col-lg-9 col-md-9 col-sm-9 col-xs-9">
+      <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
+    </div>
+
+    <div class="col-xs-3">
+      <button type="button" class="" (click)="loadCongressData()"
+        [ngClass]="{ 'btn-legis btn-legis-select': congressData, 'btn-legis btn-secondary': !congressData  }">Find</button>
+    </div>
   </div>
 
-  <div class="address col-lg-9 col-md-9 col-sm-9 col-xs-9">
-    <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
+  <div style="margin-top:5px" *ngIf="divisions && divisions.length > 0">
+    <div class="sub-title sub-title-size">
+      <h4>CATEGORY</h4>
+    </div>
+    <div class="row" style="margin-left:1px">
+      <span [ngClass]="getScreenStyle()"><button class="btn btn-light button-color" (click)="selectDivision(division);"
+          *ngFor="let division of divisions">
+          {{ division }}
+        </button></span>
+    </div>
+
+  </div>
+  <div style="margin-top:5px" *ngIf="divisionOffices && divisionOffices.length > 0">
+    <div class="sub-title sub-title-size">
+      <h4>SUB CATEGORY</h4>
+    </div>
+    <div class="row" style="margin-left:1px">
+      <span [ngClass]="getScreenStyle()"><button class="btn btn-light button-color"
+          (click)="selectDivisionOffice(divisionOffice);" *ngFor="let divisionOffice of divisionOffices">
+          {{ divisionOffice }}
+        </button></span>
+    </div>
   </div>
 
-  <div class="col-xs-3">
-    <button type="button" class=""  (click)="loadCongressData()" [ngClass]="{ 'btn-legis btn-legis-select': congressData, 'btn-legis btn-secondary': !congressData  }">Find</button>
+  <div class="row">
+    <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow"
+      *ngFor="let legislator of legislators">
+      <app-legislator [legislator]=legislator></app-legislator>
+    </div>
   </div>
+
 </div>
 
-  <div [ngClass]="{ 'row legisBoundary': divisions.length > 0, 'row': divisions.length < 1  }">
+  <!-- <div [ngClass]="{ 'row legisBoundary': divisions.length > 0, 'row': divisions.length < 1  }">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <ul class="nav">
         <li class="nav-item border-right" *ngFor="let division of divisions">
@@ -38,21 +71,7 @@
 
       </ul>
     </div>
-  </div>
-
-</div>
-
-
-      <div class="row">
-        <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let legislator of legislators">
-          <app-legislator [legislator]=legislator></app-legislator>
-        </div>
-      </div>
-
-
-     
-
-
+  </div> -->
         <!--
         <div class="row">
         
