--- a/src/app/components/searchlegislators/searchlegislators.component.css
+++ b/src/app/components/searchlegislators/searchlegislators.component.css
@@ -103,3 +103,29 @@
 .cursor-hand{
   cursor: pointer;
 }
+.mobile-device{
+  white-space:nowrap; 
+  overflow-x:scroll;
+}
+
+.sub-title {
+  margin: 0px;
+  margin-bottom: 20px;
+  clear: left;
+  padding-top: 35px;
+}
+.sub-title-size {
+  padding-right: 30px;
+}
+
+.button-color {
+  color: rgb(0 0 0 / 64%);
+  border: 1px solid #ebebeb;
+  margin-bottom: 12px;
+  background-color: rgba(0,0,0,0.08) !important;
+  font-weight: 600;
+  font-size: 17px;
+  border-radius: 28px;
+  padding: 8px 20px;
+  margin-right: 16px;
+}
