search input style changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -56,10 +56,11 @@
           <h3>Place to Engage with your Legislative Representatives and Local community.</h3>
                       <!-- <div class="full-search-2 eclip-search italian-search hero-search-radius">
             <div class="hero-search-content"> -->
- <div class="full-search-2 eclip-search italian-search hero-search-radius">
-  <div class="hero-search-content">
+  <div>
+  <!-- <div class="full-search-2 eclip-search italian-search hero-search-radius">
+  <div class="hero-search-content"> -->
  <app-searchlegislators [registration]=true></app-searchlegislators>
-</div>
+<!-- </div> -->
  <!-- </div>
  </div> -->
  </div>
