--- a/src/app/components/searchlegislators/searchlegislators.component.css
+++ b/src/app/components/searchlegislators/searchlegislators.component.css
@@ -129,3 +129,20 @@
   padding: 8px 20px;
   margin-right: 16px;
 }
+
+.banner-text {
+    text-align: center;
+}
+.location-search {
+    background: #00000061;
+    padding: 20px 27px;
+    border-radius: 4px;
+    padding-bottom: 7px;
+    -webkit-box-shadow: 0 0 0 8px rgb(255 255 255 / 20%);
+    box-shadow: 0 0 0 8px rgb(255 255 255 / 20%);
+}
+
+input-with-icon {
+  position: relative;
+  width: 100%;
+}
