--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -54,7 +54,7 @@
     <div class="col-sm-6">
       <div class="banner-caption">
         <div class="col-md-12 col-sm-12 banner-text">
-          <h3>This is a place to know about Legislative representatives, Bills, Communities and many that matters to you.</h3>
+          <h3>GoPolitix is a place to know about Legislative representatives, Bills, Communities and many that matters to you.</h3>
         </div>
       </div>
     </div>
