--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,13 +7,14 @@
 
         </div>
 
-        <div *ngIf="posts.length > 0" class="all-posts-div">
+        <div *ngIf="posts.length > 0">
             <cdk-virtual-scroll-viewport style="height: 550px" class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
                 <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i" [selfActivities]="selfActivities">
                 </app-postcard>
             </cdk-virtual-scroll-viewport>
             <button *ngIf="!selfActivities" (click)="topFunction()" id="myBtn" title="Start New Conversation"><i class='fa fa-flag'></i></button>
         </div>
+        
         <div *ngIf="posts.length < 1">
             No Post to show 
         </div>
